--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "reactstrap": "^8.10.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
